--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -1,10 +1,10 @@
 .shopTitle {
-  margin-top: 80px;
+  margin-top: 60px;
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
 }
 .description {
-  margin-top: 60px;
+  margin-top: 10px;
   text-align: center;
   font-size: 20px;
 }
@@ -19,17 +19,20 @@
 
 .product {
   border-radius: 15px;
-  width: 300px;
+  width: 250px;
   height: 350px;
-  margin: 100px;
+  margin: 130px 20px 130px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center; /*Align text within the container to center*/
 }
 
 .product img {
-  width: 400px;
+  width: 110%; /*Set the width to 100% of the parent container (.product)*/
+  height: 110%; 
+  object-fit: cover; /*You can use object-fit property to control how images are scaled to fit the dimensions*/
 }
 
 .product .description {
